--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     </div>
   </nav>
-  <h2 class="text-center">ur Menu</h2>
+  <h2 class="text-center">Our Menu</h2>
   <section>
     <div id="chicken" class="sectionStyle col-xs-12 col-md-6 col-lg-4">
       <div class="myImage"></div>
